# OG-AI-

./: .bandit  .bandit.yml  .coverage  .dockerignore  .env  .env.example  .flake8  .gitignore  .safety-policy.yml  AUTHENTICATION.md  CI_CD_TROUBLESHOOTING.md  CODEPEN_README.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  DIAGNOSE_ISSUES.bat  Dockerfile  ENHANCED_FEATURES.md  EPIC_UPGRADE_COMPLETE.md  FIREWALL_SETUP.md  FIXES_SUMMARY.md  GANGSTER_MODE_GUIDE.md  GANGSTER_QUICKSTART.md  HOW_TO_START.md  LAUNCH_SUPREME.bat  LICENSE  MANIFEST.in  MOBILE_ACCESS.md  OG_AI_COMPLETE_GUIDE.md  PYPI_PUBLISHING.md  Procfile  QUICKSTART.md  QUICKSTART_GUIDE.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  README_DEPLOY.md  RENDER_DEPLOY.md  RUNNER_SETUP.md  RUN_OG_SUPREME.bat  (+58 more)
.claude/: Untitled-1.txt  settings.local.json
.github/: copilot-instructions.md
.github/agents/: my-agent.agent.md
.github/workflows/: self-hosted-ci.yml
ai_website/: index.html
ai_website/css/: style.css
ai_website/js/: script.js
scripts/: basic-setup.ps1  setup-deployment.ps1  setup-runner.ps1  simple-setup.ps1
static/: styles.css
