[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "og-ai-agent"
version = "1.0.0"
description = "A simple yet extensible conversational AI agent with RESTful API"
readme = "README.md"
authors = [
    {name = "Goatfighter206", email = "237623808+Goatfighter206@users.noreply.github.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]
keywords = ["ai", "agent", "chatbot", "conversational-ai", "flask", "api"]

dependencies = [
    "Flask>=2.3.0",
    "Flask-CORS>=4.0.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Goatfighter206/OG-AI-"
Repository = "https://github.com/Goatfighter206/OG-AI-"
Issues = "https://github.com/Goatfighter206/OG-AI-/issues"

[project.scripts]
og-ai = "ai_agent:main"
og-ai-server = "ai_agent:app"

[tool.setuptools]
py-modules = ["ai_agent"]

[tool.setuptools.package-data]
"*" = ["config.json"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    ".venv/*",
    "venv/*",
    "env/*",
    "build/*",
    "dist/*"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=html --cov-report=term"
testpaths = [
    ".",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/.venv/*",
    "*/venv/*",
    "*/env/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
